// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match snapshot Metric default 1`] = `
<div
  className="box-adaptive__BoxStyled-sc-g2wy39-0 bhkzHL metric__MetricContainer-sc-1da10dm-0 jwfGFk"
>
  <span
    className="text-content__TextStyled-sc-1stkrsz-0 bvjSLx"
    data-test="text-content"
  >
    999
  </span>
  <span
    className="text-content__TextStyled-sc-1stkrsz-0 gFAwBQ"
    data-test="text-content"
    title="Default Metric is a default metric of..."
  >
    Default Metric
    <span>
      info
    </span>
  </span>
</div>
`;

exports[`Match snapshot Metric with color 1`] = `
<div
  className="box-adaptive__BoxStyled-sc-g2wy39-0 bhkzHL metric__MetricContainer-sc-1da10dm-0 jwfGFk"
>
  <span
    className="text-content__TextStyled-sc-1stkrsz-0 bvjSLx"
    data-test="text-content"
  >
    99
  </span>
  <span
    className="text-content__TextStyled-sc-1stkrsz-0 gFAwBQ"
    data-test="text-content"
    title="Another Metric is a another metric of..."
  >
    Another Metric
    <span>
      info
    </span>
  </span>
</div>
`;
